--- a/package.json
+++ b/package.json
@@ -1,12 +1,29 @@
 {
   "name": "apimanager",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rvrntsv/apimanager.git"
+  },
+  "bugs": {
+    "url": "https://github.com/rvrntsv/apimanager/issues"
+  },
+  "homepage": "https://github.com/rvrntsv/apimanager#readme",
+  "description": "",
+  "dependencies": {
+    "bluebird": "^3.7.2",
+    "lodash": "^4.17.21",
+    "promise-chains": "^0.3.12",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6",
+    "snoowrap": "^1.23.0",
+    "ws": "^8.8.1"
+  }
 }
